# menmos

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  release.toml
.github/workflows/: ci.yml  release.yml
crates/apikit/: Cargo.toml
crates/apikit/src/: auth.rs  lib.rs  payload.rs  reject.rs  reply.rs
crates/betterstreams/: Cargo.toml
crates/betterstreams/src/: fs.rs  lib.rs  util.rs
crates/client/: Cargo.toml
crates/client/src/: builder.rs  lib.rs  omniclient.rs  parameters.rs  profile.rs
crates/dns-server/: Cargo.toml
crates/dns-server/src/: config.rs  header.rs  packet.rs  packet_buffer.rs  query_type.rs  resolver.rs  result_code.rs  server.rs
crates/dns-server/tests/: server_baseline.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: bitvec_tree.rs  documents.rs  iface.rs  lib.rs  meta.rs  recycling_ids.rs  root.rs  users.rs
crates/indexer/src/test/: bitvec_tree.rs  document.rs  meta.rs  mod.rs  storage.rs
crates/interface/: Cargo.toml
crates/interface/src/: directory.rs  lib.rs  message.rs  storage.rs
crates/lfan/: Cargo.toml
crates/lfan/src/: lib.rs
crates/lfan/src/cache/: cache.rs  concurrent_cache.rs  mod.rs  modular_cache.rs  policy.rs  ttl_cache.rs
crates/lfan/src/policy/: evict_lru.rs  insert_always.rs  mod.rs
crates/menmos-antidns/: Cargo.toml
crates/menmos-antidns/src/: extract.rs  header.rs  lib.rs  packet.rs  packet_buffer.rs  query_type.rs  question.rs  record.rs  resolver.rs  result_code.rs  server.rs
crates/menmos-antidns/tests/: server_baseline.rs
crates/menmos-apikit/: Cargo.toml
crates/menmos-apikit/src/: auth.rs  lib.rs  middleware.rs  payload.rs  reject.rs  reply.rs
crates/menmos-auth/: Cargo.toml
crates/menmos-auth/src/: lib.rs  storage_node_identity.rs  user_identity.rs
crates/menmos-betterstreams/: Cargo.toml
crates/menmos-betterstreams/src/: fs.rs  lib.rs
crates/menmos-client/: Cargo.toml
crates/menmos-client/src/: builder.rs  client.rs  lib.rs  metadata_detector.rs  parameters.rs  profile.rs  smart_detector.rs
crates/menmos-client/src/data/: mime-types.json
crates/menmos-client/src/test/: metadata_detector.rs  mod.rs  smart_detector.rs
crates/menmos-indexer/: Cargo.toml
crates/menmos-indexer/src/: bitvec_tree.rs  documents.rs  iface.rs  lib.rs  meta.rs  root.rs  routing.rs  storage.rs  users.rs
crates/menmos-indexer/src/test/: document.rs  mod.rs  routing.rs  storage.rs  users.rs
crates/menmos-interface/: Cargo.toml
crates/menmos-interface/src/: directory.rs  lib.rs  storage.rs  timestamp_nanos.rs
crates/menmos-interface/src/directory/: dir.rs  expression.rs  mod.rs
crates/menmos-protocol/: Cargo.toml
crates/menmos-protocol/src/: common.rs  directory.rs  lib.rs
crates/menmos-protocol/src/header/: blob_meta.rs  blob_size.rs  mod.rs
crates/menmos-repository/: Cargo.toml
crates/menmos-repository/src/: disk.rs  iface.rs  lib.rs  util.rs
crates/menmos-repository/src/disk/: mod.rs  ops.rs  repo.rs
crates/menmos-repository/src/s3/: file_cache.rs  repo.rs
crates/menmos-sdk/: Cargo.toml
crates/menmos-sdk/src/: lib.rs  profile.rs  push.rs  typing.rs  util.rs
crates/menmos-sdk/src/fs/: dir.rs  error.rs  file.rs  mod.rs
crates/menmos-sdk/src/metadata_detector/: detector.rs  mod.rs
crates/menmos-sdk/src/metadata_detector/data/: mime-types.json
crates/menmos-std/: Cargo.toml
crates/menmos-std/src/: fs.rs  lib.rs  tx.rs
crates/menmos-std/src/collections/: async_list.rs  async_map.rs  async_set.rs  concurrent_list.rs  concurrent_map.rs  concurrent_set.rs  mod.rs
crates/menmos-std/src/data/: mime-types.json
crates/menmos-std/src/sync/: mod.rs  sharded_mutex.rs
crates/menmos-testing/: Cargo.toml
crates/menmos-testing/src/fixtures/: mod.rs
crates/menmos-testing/src/fixtures/data/: amphora_http.toml  menmosd_http.toml
crates/menmos-xecute/: Cargo.toml
crates/menmos-xecute/src/: daemon.rs  lib.rs  logging.rs  telemetry.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: directory.rs  storage.rs
crates/rapidquery/: Cargo.toml
crates/rapidquery/src/: expression.rs  interface.rs  lib.rs  model.rs  parser.rs  resolver.rs  span.rs
crates/rapidquery/src/parse/: interface.rs  mod.rs  parser.rs  util.rs
crates/repository/: Cargo.toml
crates/repository/src/: disk.rs  iface.rs  lib.rs
crates/repository/src/s3/: file_cache.rs  mod.rs  repo.rs
crates/testing/: Cargo.toml
crates/testing/src/fixtures/: mod.rs
crates/testing/src/fixtures/data/: menmosd_http.toml
crates/urlsign/: Cargo.toml
crates/urlsign/src/: data.rs  lib.rs  sign.rs  validate.rs
crates/xecute/: Cargo.toml
crates/xecute/src/: daemon.rs  logging.rs
python/: .gitignore  pyproject.toml
python/menmos/: directory.py  process.py  storage.py
python/tests/: test_delete.py  test_directory_node.py  test_list_meta.py  test_put.py
python/tests/util/: fixtures.py  helpers.py
