[workspace]
members = [
    "bin/amphora",
    "bin/menmos-cli",
    "bin/menmosd",
    "crates/apikit",
    "crates/betterstreams",
    "crates/dns-server",
    "crates/indexer",
    "crates/interface",
    "crates/lfan",
    "crates/menmos-client",
    "crates/protocol",
    "crates/rapidquery",
    "crates/repository",
    "crates/testing",
]
