[workspace]
members = [
    "bin/amphora",
    "bin/menmos-cli",
    "bin/menmosd",
    "crates/lfan",
    "crates/menmos-antidns",
    "crates/menmos-apikit",
    "crates/menmos-betterstreams",
    "crates/menmos-client",
    "crates/menmos-indexer",
    "crates/menmos-interface",
    "crates/menmos-protocol",
    "crates/menmos-repository",
    "crates/menmos-testing",
    "crates/menmos-xecute",
    "crates/rapidquery",
]
