[workspace]
members = [
    "bin/amphora",
    "bin/menmos-cli",
    "bin/menmosd",
    "crates/lfan",
    "crates/menmos-antidns",
    "crates/menmos-apikit",
    "crates/menmos-betterstreams",
    "crates/menmos-client",
    "crates/menmos-indexer",
    "crates/menmos-interface",
    "crates/menmos-protocol",
    "crates/menmos-repository",
    "crates/menmos-std",
    "crates/menmos-testing",
    "crates/menmos-xecute",
    "crates/rapidquery",
]

[patch.crates-io]
lfan = { path = 'crates/lfan' }
menmos-antidns = { path = 'crates/menmos-antidns' }
menmos-apikit = { path = 'crates/menmos-apikit' }
menmos-betterstreams = { path = 'crates/menmos-betterstreams' }
menmos-client = { path = 'crates/menmos-client' }
menmos-indexer = { path = 'crates/menmos-indexer' }
menmos-interface = { path = 'crates/menmos-interface' }
menmos-protocol = { path = 'crates/menmos-protocol' }
menmos-repository = { path = 'crates/menmos-repository' }
menmos-std = { path = 'crates/menmos-std' }
menmos-testing = { path = 'crates/menmos-testing' }
menmos-xecute = { path = 'crates/menmos-xecute' }
rapidquery = { path = 'crates/rapidquery' }
