[tool.poetry]
name = "python"
version = "0.1.0"
description = "Python components for menmos"
authors = ["William Dussault <dalloriam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
