[package]
name = "apikit"
version = "0.0.2"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = {version = "1", features = ["derive"]}
warp = {version = "0.3", features = ["tls"]}
