[package]
name = "apikit"
version = "0.0.4"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1.3"
branca = "0.10"
chrono = "0.4"
log = "0.4"
serde = {version = "1", features = ["derive"]}
warp = {version = "0.3", features = ["tls"]}
