[package]
name = "betterstreams"
version = "0.0.5-alpha.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = {version = "1", features = ["io-util", "fs", "rt-multi-thread"]}

[dependencies]
anyhow = "1"
bytes = "1.0"
futures = "0.3"
log = "0.4"
tokio = {version = "1", features = ["io-util", "fs"]}
tokio-util = {version = "0.6.3", features = ["codec", "io"]}
