[package]
name = "dns-server"
version = "0.0.2-alpha.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1"
portpicker = "0.1"
trust-dns-resolver = "0.20"

[dependencies]
log = "0.4"
nom = {version = "6.1"}
serde = {version = "1.0", features = ["derive"]}
snafu = "0.6"
tokio = {version = "1.2", features = ["full"]}
