[package]
name = "indexer"
version = "0.0.3-alpha.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3.2"

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bincode = "1.3.1"
bitvec = {version = "0.20", features = ["serde"]}
byteorder = "1.4.2"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
interface = {path = "../interface"}
log = "0.4"
sled = {git = "https://github.com/spacejam/sled", branch = "main"}
tokio = {version = "1.2", features = ["macros"]}
