[package]
name = "interface"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "0.5"
async-trait = "0.1.42"
futures = "0.3"
headers = "=0.3.2"
rapidquery = {path = "../rapidquery"}
reqwest = {version = "0.10", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
warp = "0.2"
