[package]
name = "interface"
version = "0.0.5-alpha.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
async-trait = "0.1.42"
futures = "0.3"
headers = "=0.3.3"
rapidquery = {path = "../rapidquery"}
reqwest = {version = "0.11", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
warp = "0.3"
