[package]
name = "lfan"
description = "Generic Caching Library"
license = "MIT"
version = "0.0.9"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["tokio"]

[dependencies]
linked-hash-map = "0.5"
tokio = {version = "1.2", features = ["sync"], optional = true}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
