[package]
name = "lfan"
description = "Generic Caching Library"
license = "MIT"
version = "0.2.6"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async = ["tokio"]

[dependencies]
linked-hash-map = "0.5"
parking_lot = "0.12"
tokio = {version = "1.23", features = ["sync"], optional = true}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
