[package]
name = "menmos-antidns"
version = "0.0.9"
authors = ["William Dussault <dalloriam@gmail.com>"]
license = "Apache-2.0"
description = "Menmos Embedded DNS Server"
edition = "2018"

[lib]
name = "antidns"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1"
portpicker = "0.1"
trust-dns-resolver = "0.20"

[dependencies]
nom = {version = "6.1"}
serde = {version = "1.0", features = ["derive"]}
snafu = "0.6"
tokio = {version = "1.2", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
