[package]
name = "menmos-antidns"
version = "0.1.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
license = "Apache-2.0"
description = "Menmos Embedded DNS Server"
edition = "2021"

[lib]
name = "antidns"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1"
portpicker = "0.1"
trust-dns-resolver = "0.21"

[dependencies]
nom = {version = "7.1"}
serde = {version = "1.0", features = ["derive"]}
snafu = "0.7"
tokio = {version = "1.16", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
