[package]
name = "menmos-apikit"
version = "0.1.1"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos API Kit"

[lib]
name = "apikit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.5.0"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
