[package]
name = "menmos-apikit"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos API Kit"

[lib]
name = "apikit"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
axum = "0.5.9"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-http = "0.6.0"
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["trace", "request-id"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-opentelemetry = "0.17.3"
uuid = { version = "1.1", features = ["v4", "fast-rng"] }
