[package]
name = "menmos-auth"
version = "0.1.1"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos API Kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bincode = "1.3.3"
branca = "0.10.1"
chrono = "0.4.19"
menmos-apikit = { "version" = "^0.1.1" }
serde = { version = "1.0.136", features = ["derive"] }
tracing = { version = "0.1.31", features = ["max_level_trace", "release_max_level_debug"] }
warp = { version = "0.3.2", features = ["tls"] }