[package]
name = "menmos-auth"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos API Kit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
axum = { version = "0.5.10", features = ["headers"] }
bincode = "1.3.3"
branca = "0.10.1"
menmos-apikit = { version = "^0.2.6" }
serde = { version = "1.0.137", features = ["derive"] }
time = "0.3.11"
tracing = { version = "0.1.35", features = ["max_level_trace", "release_max_level_debug"] }
