[package]
name = "menmos-betterstreams"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos library for working with streams"

[lib]
name = "betterstreams"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tokio = {version = "1", features = ["io-util", "fs", "rt-multi-thread"]}

[dependencies]
anyhow = "1"
bytes = "1.2"
futures = "0.3"
tokio = {version = "1", features = ["io-util", "fs"]}
tokio-util = {version = "0.7.4", features = ["codec", "io"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
