[package]
name = "menmos-client"
version = "0.0.10"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos client library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1"
futures = "0.3"
hyper = "0.14"
menmos-apikit = {version = "^0.0.10"}
menmos-interface = {version = "^0.0.10"}
menmos-protocol = {version = "^0.0.10"}
mpart-async = "0.5"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
snafu = "0.7"
tokio = {version = "1.2", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
