[package]
name = "menmos-interface"
version = "0.0.5"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
description = "Interface to the menmos nodes"

[lib]
name = "interface"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
async-trait = "0.1.42"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
headers = "=0.3.3"
rapidquery = {version = "0.0.5", features=["bitvec_span"]}
reqwest = {version = "0.11", features = ["json", "stream"]}
serde = {version = "1.0", features = ["derive"]}
warp = "0.3"
