[package]
name = "menmos-interface"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Interface to the menmos nodes"

[lib]
name = "interface"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
bytes = "1"
async-trait = "0.1.56"
futures = "0.3"
headers = "0.3.7"
nom = "7.1.1"
rapidquery = { version = "^0.2.6", features = ["bitvec_size", "parse"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
time = {version = "0.3.9", features = ["serde", "serde-well-known"]}
