[package]
name = "menmos-protocol"
version = "0.0.5"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
description = "Menmos library containing protocol payloads"

[lib]
name = "protocol"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
menmos-interface = {version = "0.0.5"}
rapidquery = {version = "0.0.5", features=["bitvec_span"]}
serde = {version = "1", features = ["derive"]}
