[package]
name = "menmos-protocol"
version = "0.0.10"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos library containing protocol payloads"

[lib]
name = "protocol"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
menmos-interface = {version = "^0.0.10"}
rapidquery = {version = "^0.0.10", features=["bitvec_span"]}
serde = {version = "1", features = ["derive"]}
