[package]
name = "menmos-protocol"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos library containing protocol payloads"

[lib]
name = "protocol"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13.0"
headers = "0.3.7"
menmos-interface = { version = "^0.2.6" }
once_cell = "1.14.0"
rapidquery = { version = "^0.2.6", features = ["bitvec_size"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
tracing = { version = "0.1.36", features = ["max_level_trace", "release_max_level_debug"] }
