[package]
name = "menmos-repository"
version = "0.1.1"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos library for storing blobs"

[lib]
name = "repository"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
aws-config = "0.6.0"
aws-sdk-s3 = "0.7.0"
aws-smithy-http = {version = "0.37", features = ["rt-tokio"]}
bytes = "1"
futures = "0.3"
lfan = {version = "^0.1.0", features = ["async"]}
menmos-betterstreams = {version = "^0.1.0"}
menmos-interface = {version = "^0.1.0"}
sysinfo = "0.23"
tokio = {version = "1.16", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
