[package]
name = "menmos-repository"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos library for storing blobs"

[lib]
name = "repository"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.56"
aws-config = "0.14.0"
aws-sdk-s3 = "0.13.0"
aws-smithy-http = { version = "0.43.0", features = ["rt-tokio"] }
bytes = "1"
futures = "0.3"
lfan = { version = "^0.2.6", features = ["async"] }
menmos-betterstreams = { version = "^0.2.6" }
menmos-interface = { version = "^0.2.6" }
parking_lot = "0.12.1"
sysinfo = "0.24.5"
tempfile = "3.3"
tokio = { version = "1.18", features = ["full"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
