[package]
name = "menmos"
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
description = "High-Level SDK for the menmos platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"

[dependencies]
menmos-client = "^0.2.4"
menmos-interface = "^0.2.4"

async-stream = "0.3"
bytes = "1"
dirs = "4"
futures = "0.3"
menmos-std = "^0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.7"
toml = "0.5"
