[package]
name = "menmos-std"
version = "0.1.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Menmos library containing misc. reusable utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
serde_json = "1.0.79"
tokio = { version = "1.16", features = ["full"] }
