[package]
name = "menmos-std"
version = "0.2.6"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Menmos library containing misc. reusable utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
once_cell = "1.12.0"
parking_lot = "0.12.1"
serde_json = "1.0.81"
tokio = { version = "1.19", features = ["full"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
