[package]
name = "menmos-testing"
version = "0.0.8"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false # Can't publish because indexer has an unpublished dependency.

[lib]
name = "testing"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amphora = {path = "../../bin/amphora"}
anyhow = "1"
futures = "0.3"
menmosd = {path = "../../bin/menmosd"}
menmos-apikit = {version = "^0.0.8"}
menmos-client = {version = "^0.0.8"}
menmos-protocol = {version = "^0.0.8"}
menmos-interface = {version = "^0.0.8"}
menmos-xecute = {version = "^0.0.8"}
portpicker = "0.1"
reqwest = {version = "0.11", features = ["json"]}
serde_json = "1"
tempfile = "3.2"
tokio = {version = "1.2", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = "0.2"
