[package]
name = "menmos-xecute"
version = "0.0.5"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
description = "Menmos entrypoint library"

[lib]
name = "xecute"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = "3.0.0-beta.2"
log4rs = "1"
log = "0.4"
num_cpus = "1.13"
tokio = {version = "1.2", features = ["full"]}
