[package]
name = "menmos-xecute"
version = "0.0.10"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos entrypoint library"

[lib]
name = "xecute"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = {version = "3.0.12", features = ["derive"]}
num_cpus = "1.13"
serde = {version = "1", features=["derive"]}
serde_json = "1"
tokio = {version = "1.2", features = ["full"]}
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
