[package]
name = "menmos-xecute"
version = "0.2.6"
license = "Apache-2.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Menmos entrypoint library"

[lib]
name = "xecute"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "3.2.22", features = ["derive"] }
config = "0.13.2"
num_cpus = "1.13"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["full"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_debug"] }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
