[package]
name = "rapidquery"
version = "0.0.7"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
description = "Rapid Query Executor"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bitvec_span = ["bitvec"]

[dependencies]
bitvec = {version = "0.20", features = ["serde"], optional = true}
log = "0.4"
nom = {version = "6.1"}
serde = {version = "1", features = ["derive"]}
snafu = "0.6"
