[package]
name = "rapidquery"
version = "0.0.10"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2021"
description = "Rapid Query Executor"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bitvec_span = ["bitvec"]

[dependencies]
bitvec = {version = "0.20", features = ["serde"], optional = true}
nom = {version = "7.1"}
serde = {version = "1", features = ["derive"]}
snafu = "0.6"
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
