[package]
name = "repository"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
bytes = "=0.5.6"
futures = "0.3"
interface = {path = "../interface"}
lfan = {path = "../lfan"}
log = "0.4"
rusoto_core = "0.45"
rusoto_s3 = "0.45"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["codec"]}
