[package]
name = "repository"
version = "0.0.2-alpha.2"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.42"
betterstreams = {path = "../betterstreams"}
bytes = "1"
futures = "0.3"
interface = {path = "../interface"}
lfan = {path = "../lfan", features = ["async"]}
log = "0.4"
rusoto_core = "0.46"
rusoto_s3 = "0.46"
tokio = {version = "1.2", features = ["full"]}
