[package]
name = "testing"
version = "0.0.2"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amphora = {path = "../../bin/amphora"}
anyhow = "1"
futures = "0.3"
log = "0.4"
log4rs = "1"
indexer = {path = "../indexer"}
menmosd = {path = "../../bin/menmosd"}
menmos-client = {path = "../menmos-client"}
portpicker = "0.1"
tempfile = "3.2"
tokio = {version = "1.2", features = ["full"]}
