[package]
name = "urlsign"
version = "0.0.1"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
branca = "0.10"
chrono = "0.4"
serde = {version = "1", features = ["derive"]}
snafu = "0.6"
